# sc_blog_salvo

./: .env  .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
assert/: index_1234.md  package.json  pnpm-lock.yaml  tailwind.config.js
assert/css/: distmain.css
assert/db/: blog.db
assert/html/: 404.html
assert/md/: catalog.md  index.md  os.md  test1.md
assert/template/: _header.html  _skill.html  _svg.html  article_upload.html  base.html  blog.html  index.html  login.html
src/: assert.rs  config.rs  db.rs  lib.rs  main.rs  render_html.rs  tera.rs
src/admin/: article.rs  auth.rs  mod.rs  user.rs
src/fs_helper/: md_helper.rs  mod.rs
